# nix-haskell-monorepo

./: README.md
developer-ergonomy/: README.md
developer-ergonomy/checking-that-caching-works/: README.md
developer-ergonomy/ides/: README.md
developer-ergonomy/prefetch-nixpkgs.sh/: README.md  prefetch-nixpkgs.sh
docker/: README.md
extra-deps/: README.md
extra-deps/monorepo/nix/: extra-deps.nix  generate-packages.sh  hydra.nix
hydra-project-config/: README.md
hydra-project-config/monorepo/nix/: hydra.nix  release.nix
monorepo-nix-expressions/: README.md
monorepo-nix-expressions/monorepo/: .gitignore  hydra.nix
monorepo-nix-expressions/monorepo/code/package1/: package1.cabal
monorepo-nix-expressions/monorepo/code/package1/src/: Main.hs
monorepo-nix-expressions/monorepo/code/package2/: package2.cabal
monorepo-nix-expressions/monorepo/code/package2/exe/Lollipops/: Colorant.hs
monorepo-nix-expressions/monorepo/nix/: generate-packages.sh  packages.nix  release.nix
nix-tests/: README.md
nix-tests/generating-tests/: README.md
nix-tests/multiple-machines/: README.md
nix-tests/simple-test/: README.md
nix-tests/testing-the-docs/: README.md
pinned-nixpkgs/: INPUTS-EXPLAINED.md  README.md  release.nix
setting-up-a-hydra-instance/: README.md
setting-up-a-hydra-instance/hydra/: configuration.nix
setting-up-a-hydra-instance/hydra/user-keys/: fghibellini.pubkey
shell.nix/: APPROACH2.md  README.md
shell.nix/monorepo/code/: cabal.project  shell.nix
shell.nix/monorepo/nix/: compute-monorepo-deps.nix  (+3 more)
system-deps/: README.md  system-deps.nix
(+17 files in other folders)
