cabal-version: 1.12

name:           package1
version:        0.1.0.0
license:        AllRightsReserved
build-type:     Simple

executable package1-exe
  main-is: Main.hs
  hs-source-dirs:
      exe
  default-extensions: OverloadedStrings NoImplicitPrelude TypeOperators DataKinds DeriveGeneric
  ghc-options: -Wall
  build-depends:
      aeson
    , base
    , text
    , package2
  default-language: Haskell2010
